tests/baselines/reference/classExtendingPrimitive.errors.txt
==== tests/cases/compiler/classExtendingPrimitive.ts (11 errors) ====
    // classes cannot extend primitives
    
    class C extends number { }
                    ~~~~~~
!!! classExtendingPrimitive.ts(3,17): error TS2073: A class may only extend another class.
    class C2 extends string { }
                     ~~~~~~
!!! classExtendingPrimitive.ts(4,18): error TS2073: A class may only extend another class.
    class C3 extends boolean { }
                     ~~~~~~~
!!! classExtendingPrimitive.ts(5,18): error TS2073: A class may only extend another class.
    class C4 extends Void  { }
                     ~~~~
!!! classExtendingPrimitive.ts(6,18): error TS2095: Could not find symbol 'Void'.
    class C4a extends void {}
                      ~~~~
!!! classExtendingPrimitive.ts(7,19): error TS1008: Unexpected token; 'type name' expected.
    class C5 extends Null { }
                     ~~~~
!!! classExtendingPrimitive.ts(8,18): error TS2095: Could not find symbol 'Null'.
    class C5a extends null { }
                      ~~~~
!!! classExtendingPrimitive.ts(9,19): error TS1008: Unexpected token; 'type name' expected.
                           ~
!!! classExtendingPrimitive.ts(9,24): error TS1005: ';' expected.
    class C6 extends undefined { }
                     ~~~~~~~~~
!!! classExtendingPrimitive.ts(10,18): error TS2095: Could not find symbol 'undefined'.
    class C7 extends Undefined { }
                     ~~~~~~~~~
!!! classExtendingPrimitive.ts(11,18): error TS2095: Could not find symbol 'Undefined'.
    
    enum E { A }
    class C8 extends E { }
                     ~
!!! classExtendingPrimitive.ts(14,18): error TS2073: A class may only extend another class.